--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
+<html>
    <head>
     <title>Gato Azul Ruso</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Fredoka+One&family=Orbitron:wght@700&family=Pacifico&display=swap" rel="stylesheet">
     
-    <link href="main.css" rel="stylesheet"/>
+    <link href="main.css" rel="stylesheet">
    </head>
 
    <body><h1>Gato Azul Russo</h1>
