--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Fredoka+One&family=Orbitron:wght@700&family=Pacifico&display=swap" rel="stylesheet">
     
-    <link href="style.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet"/>
    </head>
 
    <body><h1>Gato Azul Russo</h1>
